--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ html {
     text-align: center;
     position: fixed;
     padding: 0.5rem 0;
+    align-content: center;
 }
 
 .sidebar .my-image img {
@@ -74,14 +75,14 @@ html {
 
 .sidebar .my-image h2 {
     text-transform: capitalize;
-    font-size: 2vw;
+    font-size: 1.8rem;
     margin-top: 0.5rem;
     margin-bottom: 0;
 }
 
 .sidebar .my-image h3 {
     text-transform: capitalize;
-    font-size: 1.4vw;
+    font-size: 1.2rem;
     margin-top: 0.8rem;
     margin-bottom: 0;
 }
@@ -98,11 +99,11 @@ html {
 .sidebar nav ul li {
     list-style: none;
     margin-top: 1.2rem;
-    width: 20vw;
+    width: 70%;
     height: 8vh;
     background-color: #000;
     border-radius: 50px;
-    font-size: 1.2vw;
+    font-size: 1rem;
 }
 
 .sidebar nav ul li a {
@@ -140,23 +141,23 @@ html {
 }
 
 .intro-section h3 {
-    font-size: 1.6vw;
+    font-size: 1.6rem;
 }
 
 .intro-section h1 {
-    font-size: 3vw;
+    font-size: 3rem;
 }
 
 .intro-section span {
     text-transform: capitalize;
     color: yellow;
-    font-size: 4.5vw;
+    font-size: 4.5rem;
 }
 
 .btn {
-    width: 7vw;
-    height: 2vw;
-    font-size: 1vw;
+    width: 100px;
+    height: 30px;
+    font-size: 1rem;
     text-transform: capitalize;
     background-color: #333;
     border: none;
@@ -167,7 +168,7 @@ html {
 }
 
 .intro-section .fa-user {
-    font-size: 1vw;
+    font-size: 1rem;
     color: #fff;
     padding-left: 0.2vw;
 }
@@ -186,38 +187,38 @@ html {
 .my-projects,
 .contact-me {
     padding: 10rem 0;
-    line-height: 2.4vw;
 }
 
 .about-section h2,
 .my-skills h2,
 .my-projects h2,
 .contact-me h2 {
-    font-size: 2.5vw;
+    font-size: 2.5rem;
     text-align: center;
-    margin-bottom: 2vw;
+    margin-bottom: 2rem;
 }
 
 .about-section hr,
 .my-skills hr,
 .my-projects hr,
 .contact-me hr {
-    margin-bottom: 2vw;
+    margin-bottom: 2rem;
     border: 1px solid #333;
 }
 
 .about-section h3 {
-    font-size: 1.8vw;
-    margin: 2vw 0;
+    font-size: 1.8rem;
+    margin: 2rem 0;
 }
 
 .about-section p {
-    font-size: 1.3vw;
+    font-size: 1.3rem;
+    line-height: 2rem;
 }
 
 .cv-btn {
-    width: 8vw;
-    height: 2.4vw;
+    width: 120px;
+    height: 35px;
     background: none;
     border: 2px solid #1a1a1a;
 }
@@ -231,26 +232,35 @@ html {
 
 .my-skills .skills .skill {
     width: 30%;
-    margin-top: 2vw;
+    background-color: #fff;
+    height: 18vw;
+    border-radius: 10px;
+    margin-top: 2rem;
     text-align: center;
 }
 
-.my-skills .skills .github {
-    width: 100%;
-    justify-content: flex-start;
-    margin-left: 2vw;
+.my-skills .skills .skill img {
+    transition: all .4s ease-in-out;
 }
 
-.my-skills .skills .github .text {
-    padding-left: 4vw;
-    line-height: 2.8vw;
-    font-size: 1.2vw;
+.my-skills .skills .skill img:hover {
+    transform: rotate(360deg);
+}
+
+.my-skills .skills .text {
+    width: 65%;
+    line-height: 2.8rem;
+    font-size: 1.2rem;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.my-skills .skills .text h3 {
     text-align: left;
 }
 
 .github-btn {
-    width: 10vw;
-    height: 3vw;
+    height: 35px;
     background: none;
     border: none;
     border-radius: 0%;
@@ -267,15 +277,14 @@ html {
 
 .my-projects .projects .project {
     width: 47%;
-    margin-top: 2vw;
+    margin-top: 2rem;
     position: relative;
     overflow: hidden;
 }
 
 .my-projects .projects .project img {
-    height: 60vh;
+    height: 26vw;
     transition: all .4s ease-in-out;
-    background: linear-gradient(to right top, rgba(0, 0, 0, 1));
 }
 
 .my-projects .projects .project img:hover {
@@ -289,56 +298,67 @@ html {
     position: absolute;
     bottom: 0;
     background-color: #1a1a1a;
-    line-height: 1.5vw;
-    padding: 1vw 2vw;
+    line-height: 1.4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 2rem;
 }
 
 .my-projects .projects .project .description h4 {
-    font-size: 1.1vw;
-    padding-bottom: 0.4vw;
+    font-size: 1.1rem;
+    padding-bottom: 0.4rem;
     color: yellow;
 }
 
 .my-projects .projects .project .description ul li {
-    font-size: 0.9vw;
+    font-size: 0.9rem;
     list-style: none;
 }
 
 .live-view-btn {
-    width: 5vw;
-    height: 2vw;
-    font-size: 0.9vw;
+    width: 75px;
+    font-size: 0.9rem;
     border-radius: 0%;
-    margin-top: 1vw;
+    margin-top: 0.5rem;
 }
 
 
 /*contact-me*/
 
-.contact-me .contact-info {
-    margin-top: 2vw;
+.contact-me .my-location {
+    justify-content: space-between;
 }
 
-.contact-me .contact-info h3 {
-    font-size: 2.2vw;
-    margin-bottom: 2vw;
+.contact-me .my-location .contact-info {
+    margin-top: 2rem;
+    width: 49%;
 }
 
-.contact-me .contact-info .contact-option {
+.contact-me .my-location .contact-info h3 {
+    font-size: 2.2rem;
+    margin-bottom: 2rem;
+}
+
+.contact-me .my-location .contact-info .contact-option {
     justify-content: flex-start;
-    margin-bottom: 1vw;
+    margin-bottom: 1rem;
 }
 
-.contact-me .contact-info span {
-    font-size: 1.4vw;
+.contact-me .my-location .contact-info span {
+    font-size: 1.4rem;
 }
 
-.contact-me .contact-info i {
+.contact-me .my-location .contact-info i {
     color: yellow;
-    font-size: 1.4vw;
-    width: 2vw;
+    font-size: 1.4rem;
+    width: 6%;
     text-align: center;
-    margin-right: 1vw;
+    margin-right: 1rem;
+}
+
+.contact-me .my-location .map {
+    width: 49%;
 }
 
 
@@ -346,18 +366,18 @@ html {
 
 footer {
     padding-bottom: 2rem;
-    line-height: 3.4vw;
-    font-size: 1.4vw;
+    line-height: 3.4rem;
+    font-size: 1.4rem;
     text-align: center;
 }
 
 footer span {
-    font-size: 2.4vw;
-    margin-right: 0.5vw;
+    font-size: 2.4rem;
+    margin-right: 0.5rem;
 }
 
 footer i {
-    margin: 0 0.4vw;
+    margin: 0 0.4rem;
 }
 
 footer .notice {
@@ -376,12 +396,27 @@ footer .notice {
 
 /*media-query*/
 
-@media (max-width:1000px) {
-    .my-projects .projects .project .description {
-        padding: 0.4vw 2vw;
+@media (max-width:1200px) {
+    .contact-me .my-location .map iframe {
+        height: 250px;
     }
-    .live-view-btn {
-        margin-top: 0.5vw;
+}
+
+@media (max-width:950px) {
+    .contact-me .my-location .map iframe {
+        height: 200px;
+    }
+}
+
+@media (max-width:1069px) {
+    html {
+        font-size: 12px;
+    }
+}
+
+@media (max-width:855px) {
+    html {
+        font-size: 10px;
     }
 }
 
@@ -413,21 +448,21 @@ footer .notice {
         width: 100%;
         z-index: 1;
         display: none;
-        padding-top: 3rem;
+        padding-top: 7rem;
     }
     .sidebar .my-image img {
-        width: 15vw;
+        width: 15%;
     }
     .sidebar .my-image h3 {
         margin-top: 0.5rem;
     }
     .sidebar nav {
-        width: 30vw;
-        margin: 0 auto;
+        width: 30%;
+        margin: 2rem auto;
     }
     .sidebar nav ul li {
-        width: 30vw;
-        margin-top: 0.9rem;
+        width: 100%;
+        margin-top: 1rem;
     }
     .icon #bar-1 {
         transform: translateY(0.9vw) rotate(45deg);
@@ -454,50 +489,85 @@ footer .notice {
         justify-content: center;
     }
     .my-skills .skills .skill {
-        width: 70%;
-        margin-top: 10vw;
+        width: 51%;
+        height: 45vw;
+        margin-top: 5rem;
     }
-    .my-skills .skills .github {
-        justify-content: center;
-    }
-    .my-skills .skills .github img {
-        width: 50%;
-    }
-    .my-skills .skills .github .text {
-        width: 70%;
-        margin-top: 5vw;
+    .my-skills .skills .text {
+        width: 100%;
+        align-items: center;
+        margin-top: 3rem;
     }
     /*my-projects*/
     .my-projects .projects .project {
-        width: 70%;
-        margin-top: 10vw;
+        width: 51%;
+        margin-top: 5rem;
     }
-    .my-projects .projects .project .description {
-        line-height: 2vw;
-        padding: 6vw 6vw;
+    .my-projects .projects .project img {
+        height: 45vw;
+    }
+    /*contact-me*/
+    .contact-me .my-location .contact-info,
+    .contact-me .my-location .map {
+        width: 100%;
+    }
+    .contact-me .my-location .map {
+        margin-top: 3rem;
+    }
+}
+
+@media (max-width:600px) {
+    .sidebar .my-image img {
+        width: 20%;
+    }
+    .sidebar nav {
+        width: 40%;
+    }
+    .sidebar nav ul li {
+        margin-top: 1rem;
     }
     .live-view-btn {
-        margin-top: 1vw;
+        width: 50px;
+        height: 20px;
     }
 }
 
-@media (max-width:450px) {
-    .my-projects .projects .project .description {
-        padding: 4vw 6vw;
+@media (max-width:500px) {
+    .sidebar .my-image img {
+        width: 25%;
     }
-}
-
-@media (max-width:320px) {
     .my-projects .projects .project .description {
-        padding: 3vw 6vw;
+        line-height: 1rem;
     }
-}
-
-@media (max-width:280px) {
-    .my-projects .projects .project .description {
-        padding: 1.5vw 4vw;
+    .my-projects .projects .project .description h4 {
+        font-size: 1rem;
+    }
+    .my-projects .projects .project .description ul li {
+        font-size: 0.7rem;
     }
     .live-view-btn {
-        margin-top: 0vw;
+        width: 50px;
+        height: 15px;
+        font-size: 0.7rem;
+    }
+}
+
+@media (max-width:360px) {
+    html {
+        font-size: 6px;
+    }
+    .btn {
+        width: 70px;
+        height: 20px;
+    }
+    .live-view-btn {
+        width: 30px;
+        height: 12px;
+    }
+    .sidebar .my-image img {
+        width: 30%;
+    }
+    .sidebar nav {
+        width: 45%;
     }
 }
