--- a/style.css
+++ b/style.css
@@ -72,8 +72,10 @@ a {
 }
 
 .sidebar .my-image img {
-    width: 40%;
+    width: 80%;
+    height: 12vw;
     border-radius: 100%;
+    object-fit: cover;
     border: 2px solid yellow;
 }
 
@@ -192,7 +194,7 @@ a {
 .my-skills,
 .my-projects,
 .contact-me {
-    padding: 10rem 0;
+    padding: 20rem 0;
 }
 
 .about-section h2,
@@ -463,7 +465,8 @@ footer .notice {
         padding-top: 7rem;
     }
     .sidebar .my-image img {
-        width: 15%;
+        width: 20%;
+        height: 20vw;
     }
     .sidebar .my-image h3 {
         margin-top: 0.5rem;
@@ -534,7 +537,8 @@ footer .notice {
 
 @media (max-width:600px) {
     .sidebar .my-image img {
-        width: 20%;
+        width: 25%;
+        height: 25vw;
     }
     .sidebar nav {
         width: 40%;
@@ -554,7 +558,8 @@ footer .notice {
 
 @media (max-width:500px) {
     .sidebar .my-image img {
-        width: 25%;
+        width: 30%;
+        height: 30vw;
     }
     .my-projects .projects .project .description {
         line-height: 1rem;
@@ -584,7 +589,8 @@ footer .notice {
 
 @media (max-width:360px) {
     .sidebar .my-image img {
-        width: 30%;
+        width: 35%;
+        height: 35vw;
     }
     .sidebar nav {
         width: 45%;
